syntax = "proto3";

package informatica;
option go_package = "informaticapb";

message Informatica {
    int32 sequence = 1;
    string title = 2;
    string info = 3;
    string host_name = 4;
}

message CommonResponse{
    int32 status = 1;
    string message = 2;
}

message CommonRequest{
    //as of now it will be bool
    // but access_token should be string given when login
    // it just for sample purpose
    bool access_token = 1;
    string email = 2;
}

message InformaticaRequest {
    Informatica informatica = 1;
}

message InformaticaResponse {
    CommonResponse common_response = 1;
}

message GetInformaticaResponse{
    CommonResponse common_response = 1;
    repeated Informatica data = 2;
}

message UpdateInformaticaRequest {
    Informatica informatica = 1;
    int32 update_sequence  = 2;
    string host_name = 3;
}

service InformaticaService {
    rpc CreateInformatica(InformaticaRequest) returns (InformaticaResponse);
    rpc GetInformatica(CommonRequest) returns (GetInformaticaResponse);
    rpc UpdateInformatica(UpdateInformaticaRequest) returns (InformaticaResponse);
}