syntax = "proto3";

package oauth;
option go_package = "oauthpb";


message CommonResponse{
    int32 status  = 1;
    string message = 2;
}

message OAuthRequest {
    string google_access_token = 1;
}

message OAuthResponse {
    CommonResponse commonResponse = 1;
}

service OAuthService {
    rpc GetOAuthService (OAuthRequest) returns (OAuthResponse);
}